--- a/html/style.css
+++ b/html/style.css
@@ -1,4 +1,8 @@
-#title, subtitle, post_title {
+#title, .subtitle, .post-title {
   color:blue;
 }
 
+.post-title {
+  font-size: 16px;
+  font-style: italic;
+}
