--- a/html/style.css
+++ b/html/style.css
@@ -1,3 +1,7 @@
+body {
+  background:#ccc;
+}
+
 #title, .subtitle, .post-title {
   color:blue;
 }
@@ -13,4 +17,11 @@
 
 .foto-quadrada {
   width: 20%;
+}
+
+.post {
+  background: white;
+  padding: 10px;
+  border: 3px solid #000;
+  margin: 10px;
 }
