--- a/html/style.css
+++ b/html/style.css
@@ -1,27 +1,60 @@
 body {
-  background:#ccc;
+  background:rgb(238, 235, 235);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 #title, .subtitle, .post-title {
-  color:blue;
+  color:#505050;
+}
+
+#title {
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+a {
+  text-decoration: line-through;
+  color: #505050;
 }
 
 .post-title {
   font-size: 16px;
   font-style: italic;
+  margin: 0;
+  margin-bottom: 15px;
+
 }
 
 .foto-redonda {
   width: 20rem;
+  border-radius: 50%;
+  border: 1px solid #505050;
 }
 
 .foto-quadrada {
   width: 20%;
+  margin-bottom: 15px;
 }
 
 .post {
   background: white;
-  padding: 10px;
-  border: 3px solid #000;
-  margin: 10px;
+  padding: 15px;
+  border: 3px solid #505050;
+  margin-bottom: 15px;
+  border-radius: 5px;
+}
+
+.post-content {
+  margin: 0;
+  margin-bottom: 15px;
+  text-transform: capitalize;
+}
+
+.contact-list {
+  list-style-type: none;
+  padding-left: 15px;
+}
+
+.contact-list li a {
+  text-decoration: none;
 }
