--- a/html/style.css
+++ b/html/style.css
@@ -1,6 +1,8 @@
 body {
   background:rgb(238, 235, 235);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  max-width: 900px;
+  margin: auto;
 }
 
 #title, .subtitle, .post-title {
@@ -26,13 +28,13 @@ a {
 }
 
 .foto-redonda {
-  width: 20rem;
+  width: 10rem;
   border-radius: 50%;
   border: 1px solid #505050;
 }
 
 .foto-quadrada {
-  width: 20%;
+  width: 100%;
   margin-bottom: 15px;
 }
 
@@ -48,6 +50,7 @@ a {
   margin: 0;
   margin-bottom: 15px;
   text-transform: capitalize;
+  text-align: justify;
 }
 
 .contact-list {
